Added class counts to training data.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Brute Force Evaluation Pipeline for Automated Dataset-Model Combination - by Selman Tabet @ https://selman.io/"
+    "# Automated Brute-Force Model Training and Evaluation Pipeline for Datasets and Models - by Selman Tabet @ https://selman.io/"
    ]
   },
   {
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import time\n"
+    "import time\n",
+    "import socket"
    ]
   },
   {
@@ -26,23 +27,6 @@
    "metadata": {},
    "source": [
     "### Environment Setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d:\\Dissertation\\Kaggle Data\\wildfire-detection\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(os.getcwd())"
    ]
   },
   {
@@ -59,9 +43,7 @@
     }
    ],
    "source": [
-    "import socket\n",
-    "print(socket.gethostname())\n",
-    "import os\n",
+    "print(\"Hostname: \", socket.gethostname())\n",
     "try: # for CUDA enviroment\n",
     "    os.system(\"nvidia-smi\")\n",
     "except:\n",
@@ -92,28 +74,26 @@
    "source": [
     "# Data processing libraries\n",
     "import numpy as np\n",
-    "from itertools import combinations\n",
-    "import json\n",
-    "import argparse\n",
+    "from itertools import combinations # For brute force combinatoric search\n",
+    "import json # For saving and loading training results\n",
+    "import argparse # For command line arguments\n",
     "\n",
-    "# ML libraries\n",
+    "# Tensorflow-Keras ML libraries\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization, GlobalAveragePooling2D, Input\n",
     "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.utils import plot_model # To plot model architecture\n",
     "\n",
-    "# Chart generating libraries\n",
-    "from tensorflow.keras.utils import plot_model\n",
-    "\n",
-    "from IPython import get_ipython\n",
-    "from pprint import pprint\n",
+    "from IPython import get_ipython # To check if code is running in Jupyter notebook\n",
+    "from pprint import pprint # To show config\n",
     "\n",
     "# Custom helper libraries\n",
-    "from default_params import *\n",
-    "from wildfirenet import *\n",
+    "from default_params import * # Default parameters\n",
+    "from wildfirenet import * # WildfireNet model, for comparison to other SOTA models in dissertation.\n",
     "from utils.img_processing import enforce_image_params\n",
-    "from utils.dataset_processors import *\n",
-    "from utils.plot_functions import *\n",
-    "from utils.evaluator import *"
+    "from utils.dataset_processors import * # Dataset and generator processing functions\n",
+    "from utils.plot_functions import * # Plotting functions\n",
+    "from utils.evaluator import * # Complete evaluation program"
    ]
   },
   {
@@ -429,7 +409,8 @@
     "train_sizes = [] # [ (dataset_1_train_size, dataset_2_train_size), ... ]\n",
     "val_datasets = [] # [ (dataset_1_val, dataset_2_val), ... ]\n",
     "val_sizes = [] # [ (dataset_1_val_size, dataset_2_val_size), ... ]\n",
-    "\n",
+    "train_counts = [] # [ (dataset_1_train_counts, dataset_2_train_counts), ... ]\n",
+    "val_counts = [] # [ (dataset_1_val_counts, dataset_2_val_counts), ... ]\n",
     "\n",
     "for d in training_datasets:\n",
     "    print(f\"Processing: {d}\")\n",
@@ -458,14 +439,17 @@
     "    train_sizes.append(train_samples)\n",
     "    val_sizes.append(val_samples)\n",
     "\n",
-    "    show_counts_from_generators(train_generator, augmented_train_generator)\n",
-    "\n",
+    "    train_count_dict = class_counts_from_generators(train_generator, augmented_train_generator)\n",
+    "    val_count_dict = class_counts_from_generators(val_generator, augmented_val_generator)\n",
+    "    \n",
+    "    train_counts.append(train_count_dict)\n",
+    "    val_counts.append(val_count_dict)\n",
     "    train_datasets.append(train_dataset)\n",
     "    val_datasets.append(val_dataset)\n",
     "    dataset_names.append(d)\n",
     "    \n",
     "# Ensure that the lengths are consistent across the board before continuing\n",
-    "assert(len(train_sizes) == len(train_datasets) and len(train_sizes) == len(val_sizes) and len(val_sizes) == len(val_datasets))\n"
+    "assert(len(train_sizes) == len(train_datasets) and len(train_sizes) == len(val_sizes) and len(val_sizes) == len(val_datasets) and len(train_counts) == len(val_counts) and len(val_counts) == len(train_sizes), \"Dataset lengths are inconsistent.\")\n"
    ]
   },
   {
@@ -489,28 +473,41 @@
     "combined_dataset_names = []\n",
     "steps_per_epoch_list = []\n",
     "validation_steps_list = []\n",
+    "train_counts_list = []\n",
+    "val_counts_list = []\n",
     "\n",
     "for combo in dataset_combos:\n",
     "    training_dataset = None\n",
     "    val_dataset = None\n",
     "    train_size = None\n",
     "    val_size = None\n",
+    "    train_count = None\n",
+    "    val_count = None\n",
     "    for idx in combo:\n",
     "        if training_dataset is None:\n",
     "            training_dataset = train_datasets[idx]\n",
     "            val_dataset = val_datasets[idx]\n",
     "            train_size = train_sizes[idx]\n",
     "            val_size = val_sizes[idx]\n",
+    "            train_count = train_counts[idx]\n",
+    "            val_count = val_counts[idx]\n",
     "        else:\n",
     "            training_dataset = training_dataset.concatenate(train_datasets[idx])\n",
     "            val_dataset = val_dataset.concatenate(val_datasets[idx])\n",
     "            train_size += train_sizes[idx]\n",
     "            val_size += val_sizes[idx]\n",
+    "            train_count = {k: train_count.get(k, 0) + train_counts[idx].get(k, 0) for k in set(train_count) | set(train_counts[idx])}\n",
+    "            val_count = {k: val_count.get(k, 0) + val_counts[idx].get(k, 0) for k in set(val_count) | set(val_counts[idx])}\n",
+    "   \n",
     "    combined_dataset_names.append(\"_\".join([dataset_names[idx] for idx in combo]))\n",
     "    combined_training_datasets.append(training_dataset)\n",
     "    combined_val_datasets.append(val_dataset)\n",
     "    steps_per_epoch_list.append(train_size // batch_size)\n",
-    "    validation_steps_list.append(val_size // batch_size)"
+    "    validation_steps_list.append(val_size // batch_size)\n",
+    "    train_counts_list.append(train_count)\n",
+    "    val_counts_list.append(val_count)\n",
+    "\n",
+    "    training_params = zip(combined_dataset_names, combined_training_datasets, combined_val_datasets, steps_per_epoch_list, validation_steps_list, train_counts_list, val_counts_list)"
    ]
   },
   {
@@ -641,7 +638,7 @@
     "    model.summary()\n",
     "    training_results[model.name] = {}\n",
     "    plot_model(model, show_shapes=True, show_layer_names=True, to_file=os.path.join(\"architectures\", f\"{model.name}_architecture.png\"))\n",
-    "    for dataset_id, train_dataset, val_dataset, steps_per_epoch, validation_steps in zip(combined_dataset_names, combined_training_datasets, combined_val_datasets, steps_per_epoch_list, validation_steps_list):\n",
+    "    for dataset_id, train_dataset, val_dataset, steps_per_epoch, validation_steps, train_counts, val_counts in training_params:\n",
     "        model.load_weights(os.path.join(checkpoint_path, f\"{model.name}_initial.weights.h5\"))\n",
     "        print(f\"Training model: {model.name} on dataset: {dataset_id}\")\n",
     "        \n",
@@ -678,6 +675,8 @@
     "            'optimal_threshold': float(optimal_threshold),\n",
     "            'train_dataset_size': steps_per_epoch * batch_size,\n",
     "            'val_dataset_size': validation_steps * batch_size,\n",
+    "            'train_counts': train_counts,\n",
+    "            'val_counts': val_counts,\n",
     "            \"evaluation\": model.evaluate(test_dataset, return_dict=True, steps=test_steps)\n",
     "        }\n",
     "\n",
