Improved assertion syntax for dataset consistency.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -440,8 +440,10 @@
     "    val_sizes.append(val_samples)\n",
     "\n",
     "    train_count_dict = class_counts_from_generators(train_generator, augmented_train_generator)\n",
-    "    val_count_dict = class_counts_from_generators(val_generator, augmented_val_generator)\n",
-    "    \n",
+    "    if val_generator is not None:\n",
+    "        val_count_dict = class_counts_from_generators(val_generator, augmented_val_generator)\n",
+    "    else:\n",
+    "        val_count_dict = {k: 0 for k in train_count_dict.keys()}\n",
     "    train_counts.append(train_count_dict)\n",
     "    val_counts.append(val_count_dict)\n",
     "    train_datasets.append(train_dataset)\n",
@@ -449,7 +451,7 @@
     "    dataset_names.append(d)\n",
     "    \n",
     "# Ensure that the lengths are consistent across the board before continuing\n",
-    "assert(len(train_sizes) == len(train_datasets) and len(train_sizes) == len(val_sizes) and len(val_sizes) == len(val_datasets) and len(train_counts) == len(val_counts) and len(val_counts) == len(train_sizes), \"Dataset lengths are inconsistent.\")\n"
+    "assert len(train_sizes) == len(train_datasets) == len(val_sizes) == len(val_datasets) == len(val_counts), \"Dataset lengths are inconsistent.\"\n"
    ]
   },
   {
