Fixed JSON save error.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -451,7 +451,7 @@
     "    dataset_names.append(d)\n",
     "    \n",
     "# Ensure that the lengths are consistent across the board before continuing\n",
-    "assert len(train_sizes) == len(train_datasets) == len(val_sizes) == len(val_datasets) == len(val_counts), \"Dataset lengths are inconsistent.\"\n"
+    "assert len(train_sizes) == len(train_datasets) == len(val_sizes) == len(val_datasets) == len(val_counts) == len(train_counts) == len(dataset_names), \"Dataset lengths are inconsistent.\"\n"
    ]
   },
   {
@@ -500,7 +500,9 @@
     "            val_size += val_sizes[idx]\n",
     "            train_count = {k: train_count.get(k, 0) + train_counts[idx].get(k, 0) for k in set(train_count) | set(train_counts[idx])}\n",
     "            val_count = {k: val_count.get(k, 0) + val_counts[idx].get(k, 0) for k in set(val_count) | set(val_counts[idx])}\n",
-    "   \n",
+    "        train_count = {k: int(v) for k, v in train_count.items()}\n",
+    "        val_count = {k: int(v) for k, v in val_count.items()}\n",
+    "\n",
     "    combined_dataset_names.append(\"_\".join([dataset_names[idx] for idx in combo]))\n",
     "    combined_training_datasets.append(training_dataset)\n",
     "    combined_val_datasets.append(val_dataset)\n",
@@ -640,7 +642,7 @@
     "    model.summary()\n",
     "    training_results[model.name] = {}\n",
     "    plot_model(model, show_shapes=True, show_layer_names=True, to_file=os.path.join(\"architectures\", f\"{model.name}_architecture.png\"))\n",
-    "    for dataset_id, train_dataset, val_dataset, steps_per_epoch, validation_steps, train_counts, val_counts in training_params:\n",
+    "    for dataset_id, train_dataset, val_dataset, steps_per_epoch, validation_steps, train_counts_dict, val_counts_dict in training_params:\n",
     "        model.load_weights(os.path.join(checkpoint_path, f\"{model.name}_initial.weights.h5\"))\n",
     "        print(f\"Training model: {model.name} on dataset: {dataset_id}\")\n",
     "        \n",
@@ -677,11 +679,12 @@
     "            'optimal_threshold': float(optimal_threshold),\n",
     "            'train_dataset_size': steps_per_epoch * batch_size,\n",
     "            'val_dataset_size': validation_steps * batch_size,\n",
-    "            'train_counts': train_counts,\n",
-    "            'val_counts': val_counts,\n",
+    "            'train_counts': train_counts_dict,\n",
+    "            'val_counts': val_counts_dict,\n",
     "            \"evaluation\": model.evaluate(test_dataset, return_dict=True, steps=test_steps)\n",
     "        }\n",
-    "\n",
+    "        print(\"Training results:\")\n",
+    "        pprint(training_results[model.name][dataset_id])\n",
     "        # Save the training results to a file after each iteration\n",
     "        with open(results_file, 'w') as f:\n",
     "            json.dump(training_results, f, indent=4)\n",
