--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -238,6 +238,9 @@
     "test_dirs = [training_datasets[ds].get('test') for ds in training_datasets]\n",
     "val_dirs = [training_datasets[ds].get('val') for ds in training_datasets]\n",
     "\n",
+    "all_dirs = train_dirs + test_dirs + val_dirs + [full_test_dir]\n",
+    "all_dirs = [d for d in all_dirs if d is not None] # Remove None values\n",
+    "\n",
     "# Combine base_models and custom_models\n",
     "all_models = base_models + custom_models\n",
     "# Create a list to keep track of which models are custom\n",
@@ -297,8 +300,6 @@
    "outputs": [],
    "source": [
     "if enforce_image_size:\n",
-    "    all_dirs = train_dirs + test_dirs + val_dirs + [full_test_dir]\n",
-    "    all_dirs = [d for d in all_dirs if d is not None]\n",
     "    for directory in all_dirs:\n",
     "        print(f\"Adjusting image properties in {directory}\")\n",
     "        enforce_image_params(directory, target_size=(img_width, img_height))"
