--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -144,7 +144,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python Config Path: None\n",
       "No Python config file specified, using default config.\n"
      ]
     }
@@ -665,6 +664,7 @@
    "outputs": [],
    "source": [
     "def generate_model(bm, custom=False, run_dir=TEMP_DIR):\n",
+    "    os.makedirs(os.path.join(run_dir, bm.__name__), exist_ok=True)\n",
     "    if custom:\n",
     "        model = bm\n",
     "        model.compile(optimizer=optimizer_fn, loss=loss_fn, metrics=metrics_list)\n",
