Reverted to previous model save mechanism.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -663,12 +663,12 @@
    },
    "outputs": [],
    "source": [
-    "def generate_model(bm, custom=False, run_dir=TEMP_DIR):\n",
-    "    os.makedirs(os.path.join(run_dir, bm.__name__), exist_ok=True)\n",
+    "def generate_model(bm, custom=False, to_dir=TEMP_DIR):\n",
+    "    os.makedirs(os.path.join(to_dir, bm.__name__), exist_ok=True)\n",
     "    if custom:\n",
     "        model = bm\n",
     "        model.compile(optimizer=optimizer_fn, loss=loss_fn, metrics=metrics_list)\n",
-    "        model.save(os.path.join(run_dir, model.name, f\"{model.name}_initial.keras\"))  \n",
+    "        model.save_weights(os.path.join(to_dir, model.name, f\"{model.name}_initial.weights.h5\"))\n",
     "        return model\n",
     "    \n",
     "    base_model = bm(\n",
@@ -691,7 +691,7 @@
     "\n",
     "    model = Model(inputs, outputs, name=bm.__name__)\n",
     "    model.compile(optimizer=optimizer_fn, loss=loss_fn, metrics=metrics_list)\n",
-    "    model.save(os.path.join(run_dir, model.name, f\"{model.name}_initial.keras\"))  \n",
+    "    model.save_weights(os.path.join(to_dir, model.name, f\"{model.name}_initial.weights.h5\"))\n",
     "    return model"
    ]
   },
@@ -9929,13 +9929,13 @@
     "results_file = os.path.join(run_dir, 'training_results.json')\n",
     "\n",
     "for base_model, custom_bool in zip(all_models, is_custom_model):\n",
-    "    model = generate_model(base_model, custom=custom_bool, run_dir=run_dir) # To display the model summary\n",
+    "    model = generate_model(base_model, custom=custom_bool, to_dir=run_dir) # To display the model summary\n",
     "    model.summary()\n",
     "    model_dir = os.path.join(run_dir, model.name)\n",
     "    training_results[model.name] = {}\n",
     "    plot_model(model, show_shapes=True, show_layer_names=True, to_file=os.path.join(model_dir, f\"{model.name}_architecture.png\"))\n",
     "    for dataset_id, train_dataset, val_dataset, steps_per_epoch, validation_steps, train_counts_dict, val_counts_dict in training_params:\n",
-    "        model = tf.keras.models.load_model(os.path.join(model_dir, f\"{model.name}_initial.keras\"))\n",
+    "        model.load_weights(os.path.join(run_dir, model.name, f\"{model.name}_initial.weights.h5\"))\n",
     "        print(f\"Training model: {model.name} on dataset: {dataset_id}\")\n",
     "        \n",
     "        # Record the start time\n",
@@ -9981,7 +9981,7 @@
     "        with open(results_file, 'w') as f:\n",
     "            json.dump(training_results, f, indent=4)\n",
     "        \n",
-    "        # model.compile(optimizer=optimizer_fn, loss=loss_fn, metrics=metrics_list) # Reset the model for the next iteration"
+    "        model.compile(optimizer=optimizer_fn, loss=loss_fn, metrics=metrics_list) # Reset the model for the next iteration"
    ]
   },
   {
