Removed resizing layer.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
     "\n",
     "# Tensorflow-Keras ML libraries\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization, GlobalAveragePooling2D, Input, Resizing\n",
+    "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization, GlobalAveragePooling2D, Input\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.utils import plot_model # To plot model architecture\n",
     "\n",
@@ -461,8 +461,6 @@
     }
    ],
    "source": [
-    "resize_fn = Resizing(img_height, img_width)\n",
-    "\n",
     "dataset_names = []\n",
     "train_datasets = [] # [ (dataset_1_train, dataset_2_train), ... ]\n",
     "train_sizes = [] # [ (dataset_1_train_size, dataset_2_train_size), ... ]\n",
@@ -481,7 +479,6 @@
     "    train_generator, augmented_train_generator = create_generators(train_dir, batch_size=batch_size, augment=augment, img_width=img_width, img_height=img_height)\n",
     "    train_samples = samples_from_generators([train_generator, augmented_train_generator])\n",
     "    train_dataset = generators_to_dataset([train_generator, augmented_train_generator], batch_size=batch_size, img_height=img_height, img_width=img_width)\n",
-    "    train_dataset = train_dataset.map(lambda x, y: (resize_fn(x), y))\n",
     "    # Apply original and augmented data generators for validation\n",
     "    if \"val\" in training_datasets[d]:\n",
     "        val_dir = training_datasets[d]['val']\n",
@@ -489,12 +486,9 @@
     "        val_generator, augmented_val_generator = create_generators(val_dir, batch_size=batch_size, augment=augment, shuffle=False, img_width=img_width, img_height=img_height)\n",
     "        val_samples = samples_from_generators([val_generator, augmented_val_generator])\n",
     "        val_dataset = generators_to_dataset([train_generator, augmented_train_generator], batch_size=batch_size, img_height=img_height, img_width=img_width)\n",
-    "        val_dataset = val_dataset.map(lambda x, y: (resize_fn(x), y))\n",
     "    else:\n",
     "        print(\"No validation set, splitting training set.\")\n",
     "        train_dataset, val_dataset, train_samples, val_samples = val_split(train_dataset, train_samples)\n",
-    "        train_dataset = train_dataset.map(lambda x, y: (resize_fn(x), y))\n",
-    "        val_dataset = val_dataset.map(lambda x, y: (resize_fn(x), y))\n",
     "        val_generator, augmented_val_generator = None, None\n",
     "    \n",
     "    # Calculate the number of samples for training and validation\n",
