Fixed file saves and decompression issues.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -658,10 +658,10 @@
    "outputs": [],
    "source": [
     "def generate_model(bm, custom=False, to_dir=TEMP_DIR):\n",
-    "    os.makedirs(os.path.join(to_dir, bm.__name__), exist_ok=True)\n",
     "    if custom:\n",
     "        model = bm\n",
     "        model.compile(optimizer=optimizer_fn, loss=loss_fn, metrics=metrics_list)\n",
+    "        os.makedirs(os.path.join(to_dir, model.name), exist_ok=True)\n",
     "        model.save_weights(os.path.join(to_dir, model.name, f\"{model.name}_initial.weights.h5\"))\n",
     "        return model\n",
     "    \n",
@@ -685,6 +685,7 @@
     "\n",
     "    model = Model(inputs, outputs, name=bm.__name__)\n",
     "    model.compile(optimizer=optimizer_fn, loss=loss_fn, metrics=metrics_list)\n",
+    "    os.makedirs(os.path.join(to_dir, model.name), exist_ok=True)\n",
     "    model.save_weights(os.path.join(to_dir, model.name, f\"{model.name}_initial.weights.h5\"))\n",
     "    return model"
    ]
@@ -9951,7 +9952,7 @@
     "        training_time = end_time - start_time\n",
     "        print(f\"Training time: {training_time:.2f} seconds\")\n",
     "\n",
-    "        model_ds_dir = os.path.join(run_dir, model.name, dataset_id)\n",
+    "        model_ds_dir = os.path.join(model_dir, dataset_id)\n",
     "        os.makedirs(model_ds_dir, exist_ok=True)\n",
     "        # Save the model\n",
     "        model.save(os.path.join(model_ds_dir, f\"{model.name}_{dataset_id}.keras\"))\n",
