Improved config handling.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -182,15 +182,9 @@
     "    pprint(config)\n",
     "    # Datasets, models, and hyperparameters are mandatory and must be processed now.\n",
     "    training_datasets = config.get('datasets', {})\n",
-    "    if training_datasets is None or len(training_datasets) == 0:\n",
-    "        raise ValueError(\"No train datasets defined in config.\")\n",
     "    full_test_dir = config.get('test')\n",
     "    base_models = config.get('keras_models', [])\n",
     "    custom_models = config.get('custom_models', [])\n",
-    "    if base_models is None or len(base_models) == 0:\n",
-    "        if custom_models is None or len(custom_models) == 0:\n",
-    "            raise ValueError(\"No models defined in config.\")\n",
-    "    \n",
     "    hyperparameters = config.get('hyperparameters')\n",
     "    default_hyperparameters = default_cfg.get('hyperparameters', {})\n",
     "    if hyperparameters is None or len(hyperparameters) == 0:\n",
@@ -208,8 +202,15 @@
     "    training_datasets = config.get('datasets', {})\n",
     "    base_models = config.get('keras_models', [])\n",
     "    custom_models = config.get('custom_models', [])\n",
-    "    hyperparameters = config.get('hyperparameters')\n",
-    "    full_test_dir = config.get('test')"
+    "    hyperparameters = config.get('hyperparameters', {\"epochs\": 50, \"batch_size\": 32})\n",
+    "    full_test_dir = config.get('test')\n",
+    "\n",
+    "if training_datasets is None or len(training_datasets) == 0:\n",
+    "    raise ValueError(\"No train datasets defined in config.\")\n",
+    "\n",
+    "if base_models is None or len(base_models) == 0:\n",
+    "    if custom_models is None or len(custom_models) == 0:\n",
+    "        raise ValueError(\"No models defined in config.\")"
    ]
   },
   {
@@ -676,6 +677,24 @@
     "run_number = len([d for d in os.listdir(\"runs\") if os.path.isdir(os.path.join(\"runs\", d)) and d.startswith('run_')]) + 1\n",
     "run_dir = os.path.join(\"runs\", f\"run_{run_number}\")\n",
     "os.makedirs(run_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_config = {\n",
+    "    \"datasets\": training_datasets,\n",
+    "    \"val_size\": val_size,\n",
+    "    \"hyperparameters\": hyperparameters,\n",
+    "    \"test_dirs\": test_dirs,\n",
+    "    \"full_test\": full_test_dir,\n",
+    "}\n",
+    "\n",
+    "with open(os.path.join(run_dir, \"run_config.json\"), \"w\") as f:\n",
+    "    json.dump(run_config, f, indent=4)"
    ]
   },
   {
