Complete run + Removed notebook cfg.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -91,11 +91,91 @@
     "from pprint import pprint # To show config\n",
     "\n",
     "# Custom helper libraries\n",
-    "from notebook_cfg import * # Default parameters\n",
     "from utils.img_processing import enforce_image_params\n",
     "from utils.dataset_processors import * # Dataset and generator processing functions\n",
     "from utils.plot_functions import * # Plotting functions\n",
     "from utils.evaluator import * # Complete evaluation program"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Specify pipeline parameters here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.metrics import Precision, Recall, AUC\n",
+    "from tensorflow.keras.applications import *\n",
+    "from custom_metrics import f1_score\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint, ReduceLROnPlateau\n",
+    "# WildfireNet model, for comparison to other SOTA models in dissertation.\n",
+    "from wildfirenet import create_wildfire_model\n",
+    "\n",
+    "DATASETS = {\n",
+    "    \"The Wildfire Dataset\": {\n",
+    "        \"train\": os.path.join(\"datasets\", \"dataset_1\", \"train\"),\n",
+    "        \"test\": os.path.join(\"datasets\", \"dataset_1\", \"test\"),\n",
+    "        \"val\": os.path.join(\"datasets\", \"dataset_1\", \"val\"),\n",
+    "        # \"augment\": False,\n",
+    "        \"source_url\": \"https://www.kaggle.com/datasets/elmadafri/the-wildfire-dataset/\"\n",
+    "    },\n",
+    "    \"DeepFire\": {\n",
+    "        \"train\": os.path.join(\"datasets\", \"dataset_2\", \"Training\"),\n",
+    "        \"test\": os.path.join(\"datasets\", \"dataset_2\", \"Testing\"),\n",
+    "        # \"augment\": False,\n",
+    "        \"source_url\": \"https://www.kaggle.com/datasets/alik05/forest-fire-dataset/\"\n",
+    "    },\n",
+    "    \"FIRE\": {\n",
+    "        \"train\": os.path.join(\"datasets\", \"dataset_3\"),\n",
+    "        # \"augment\": False,\n",
+    "        \"source_url\": \"https://www.kaggle.com/datasets/phylake1337/fire-dataset/\"\n",
+    "    },\n",
+    "    # \"Forest Fire\": {\n",
+    "    #     \"train\": os.path.join(\"datasets\", \"dataset_4\", \"train\"),\n",
+    "    #     \"test\": os.path.join(\"datasets\", \"dataset_4\", \"test\"),\n",
+    "    #     # \"augment\": False,\n",
+    "    #     \"source_url\": \"https://www.kaggle.com/datasets/mohnishsaiprasad/forest-fire-images\"\n",
+    "    # },\n",
+    "}\n",
+    "\n",
+    "default_cfg = {\n",
+    "    \"datasets\": DATASETS,  # The datasets to use\n",
+    "    # This overrides the test datasets stored under \"datasets\"\n",
+    "    \"test\": os.path.join(\"datasets\", \"d4_test\"),\n",
+    "    \"val_size\": 0.2,  # The size of the validation dataset if splitting is needed\n",
+    "    \"keras_models\": [MobileNetV3Small, MobileNetV2, VGG19, ResNet50V2, Xception, DenseNet121],\n",
+    "    \"custom_models\": [create_wildfire_model(224, 224)],  # Custom models to use\n",
+    "    \"hyperparameters\": {\n",
+    "        \"batch_size\": 32,\n",
+    "        \"epochs\": 80,\n",
+    "    },\n",
+    "    \"optimizer\": \"adam\",\n",
+    "    \"loss\": \"binary_crossentropy\",\n",
+    "    \"image_width\": 224,\n",
+    "    \"image_height\": 224,\n",
+    "    \"metrics\": ['accuracy',  # Metrics functions, directly handed to model.compile\n",
+    "                Precision(name=\"precision\"),\n",
+    "                Recall(name=\"recall\"),\n",
+    "                AUC(name=\"auc\"),\n",
+    "                f1_score\n",
+    "                ],\n",
+    "    \"callbacks\": [  # Callback functions, directly handed to model.fit\n",
+    "        EarlyStopping(monitor='val_loss', patience=5,\n",
+    "                      restore_best_weights=True),\n",
+    "        ModelCheckpoint(filepath=os.path.join(\"tmp\", 'temp_model.keras'),\n",
+    "                        monitor='val_loss', save_best_only=True),\n",
+    "        ReduceLROnPlateau(monitor='val_loss', factor=0.5,\n",
+    "                          patience=3, verbose=1)\n",
+    "    ],\n",
+    "    # If True, the image sizes and RGB colour mode will be enforced on all images\n",
+    "    \"enforce_image_settings\": True\n",
+    "}"
    ]
   },
   {
