Added annotations to notebook.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -8,6 +8,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data processing libraries\n",
+    "import numpy as np\n",
+    "from itertools import combinations # For brute force combinatoric search\n",
+    "import json # For saving and loading training results\n",
+    "import argparse # For command line arguments\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "# Tensorflow-Keras ML libraries\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization, GlobalAveragePooling2D, Input\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.utils import plot_model # To plot model architecture\n",
+    "\n",
+    "from IPython import get_ipython # To check if code is running in Jupyter notebook\n",
+    "import importlib.util # To import config module from str\n",
+    "from pprint import pprint # To show config\n",
+    "\n",
+    "# Custom helper libraries\n",
+    "from utils.img_processing import enforce_image_params\n",
+    "from utils.dataset_processors import * # Dataset and generator processing functions\n",
+    "from utils.plot_functions import * # Plotting functions\n",
+    "from utils.evaluator import * # Complete evaluation program"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -17,9 +55,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import time\n",
-    "import socket\n",
     "\n",
     "TEMP_DIR = \"tmp\""
    ]
@@ -45,9 +80,10 @@
     }
    ],
    "source": [
+    "import socket\n",
     "print(\"Hostname: \", socket.gethostname())\n",
     "try: # for CUDA enviroment\n",
-    "    os.system(\"nvidia-smi\")\n",
+    "    os.system(\"nvidia-smi\") # Check GPU\n",
     "except:\n",
     "    pass"
    ]
@@ -56,43 +92,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing Libraries"
+    "### TF Device check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA_VISIBLE_DEVICES: None\n",
+      "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Data processing libraries\n",
-    "import numpy as np\n",
-    "from itertools import combinations # For brute force combinatoric search\n",
-    "import json # For saving and loading training results\n",
-    "import argparse # For command line arguments\n",
-    "\n",
-    "# Tensorflow-Keras ML libraries\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization, GlobalAveragePooling2D, Input\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.utils import plot_model # To plot model architecture\n",
-    "\n",
-    "from IPython import get_ipython # To check if code is running in Jupyter notebook\n",
-    "import importlib.util # To import config module from str\n",
-    "from pprint import pprint # To show config\n",
-    "\n",
-    "# Custom helper libraries\n",
-    "from utils.img_processing import enforce_image_params\n",
-    "from utils.dataset_processors import * # Dataset and generator processing functions\n",
-    "from utils.plot_functions import * # Plotting functions\n",
-    "from utils.evaluator import * # Complete evaluation program"
+    "cuda_visible_devices = os.environ.get('CUDA_VISIBLE_DEVICES')\n",
+    "print(f\"CUDA_VISIBLE_DEVICES: {cuda_visible_devices}\")\n",
+    "print(tf.config.get_visible_devices())\n",
+    "print(tf.config.list_physical_devices('GPU'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Specify pipeline parameters here"
+    "## Specify pipeline parameters here\n",
+    "The configuration object is the most important part of the pipeline. It contains all the parameters that the pipeline will use to train and evaluate the models. The configuration object is a dictionary that MUST be named ***'default_cfg'***. The configuration object must contain the following\n",
+    "```python\n",
+    "{\n",
+    "    'datasets': {\n",
+    "        \"dataset_name\": {\n",
+    "            'train': path str to the training dataset ***(required)***,\n",
+    "            'val': path str to the validation dataset (optional, recommended),\n",
+    "            'test': path str to the test dataset (optional),\n",
+    "        },\n",
+    "        \"dataset_name\": {\n",
+    "            'train': path str to the training dataset\n",
+    "            # keep adding as needed\n",
+    "        },\n",
+    "    },\n",
+    "    'test': path str to the test dataset (optional, recommended),\n",
+    "    'val_size': float of the validation dataset to split (optional, default=0.2),\n",
+    "    'keras_models': [list of instances of the keras.applications base models]\n",
+    "    'custom_models': [list of instances of custom models, to be compiled without modification],\n",
+    "    'hyperparameters': {\n",
+    "        'batch_size': required int,\n",
+    "        'epochs': required int,\n",
+    "    },\n",
+    "    'optimizer': instance of keras.optimizers.Optimizer or str ***(required)***,\n",
+    "    'loss': instance of keras.losses.Loss or str ***(required)***,\n",
+    "    'image_width': int ***(required)***,\n",
+    "    'image_height': int ***(required)***,\n",
+    "    'metrics': [list of metric functions] ***(required)***,\n",
+    "    'callbacks': [list of instances of keras.callbacks.Callback] (optional),\n",
+    "    'enforce_image_params': bool to force RGB color mode and image sizes according to above specs (optional)\n",
+    "    }\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -122,26 +183,14 @@
     "        \"train\": os.path.join(\"datasets\", \"dataset_1\", \"train\"),\n",
     "        \"test\": os.path.join(\"datasets\", \"dataset_1\", \"test\"),\n",
     "        \"val\": os.path.join(\"datasets\", \"dataset_1\", \"val\"),\n",
-    "        # \"augment\": False,\n",
-    "        \"source_url\": \"https://www.kaggle.com/datasets/elmadafri/the-wildfire-dataset/\"\n",
     "    },\n",
     "    \"DeepFire\": {\n",
     "        \"train\": os.path.join(\"datasets\", \"dataset_2\", \"Training\"),\n",
     "        \"test\": os.path.join(\"datasets\", \"dataset_2\", \"Testing\"),\n",
-    "        # \"augment\": False,\n",
-    "        \"source_url\": \"https://www.kaggle.com/datasets/alik05/forest-fire-dataset/\"\n",
     "    },\n",
     "    \"FIRE\": {\n",
     "        \"train\": os.path.join(\"datasets\", \"dataset_3\"),\n",
-    "        # \"augment\": False,\n",
-    "        \"source_url\": \"https://www.kaggle.com/datasets/phylake1337/fire-dataset/\"\n",
     "    },\n",
-    "    # \"Forest Fire\": {\n",
-    "    #     \"train\": os.path.join(\"datasets\", \"dataset_4\", \"train\"),\n",
-    "    #     \"test\": os.path.join(\"datasets\", \"dataset_4\", \"test\"),\n",
-    "    #     # \"augment\": False,\n",
-    "    #     \"source_url\": \"https://www.kaggle.com/datasets/mohnishsaiprasad/forest-fire-images\"\n",
-    "    # },\n",
     "}\n",
     "\n",
     "default_cfg = {\n",
@@ -176,35 +225,6 @@
     "    # If True, the image sizes and RGB colour mode will be enforced on all images\n",
     "    \"enforce_image_settings\": True\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Device check"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA_VISIBLE_DEVICES: None\n",
-      "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]\n",
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "cuda_visible_devices = os.environ.get('CUDA_VISIBLE_DEVICES')\n",
-    "print(f\"CUDA_VISIBLE_DEVICES: {cuda_visible_devices}\")\n",
-    "print(tf.config.get_visible_devices())\n",
-    "print(tf.config.list_physical_devices('GPU'))"
    ]
   },
   {
